--- a/main.html
+++ b/main.html
@@ -10,7 +10,21 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <div class="content">
+        <article>
+            <p class="first-child">First paragraph</p>
+            <p class="nth-child">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <p class="last-child">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        </article>
 
+        <ul>
+            <li class="font-size">First Item</li>
+            <li class="gray-bg">Second Item</li>
+            <li class="pink-bg">Third Item</li>
+            <li class="gray-bg">Fourth Item</li>
+            <li class="font-size">Fifth Item</li>
+        </ul>
+    </div>
 </body>
 
 </html>
